--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lottie-web": "^5.12.2",
     "next": "15.1.4",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "react-lottie-player": "^2.1.0",
     "react-redux": "^9.2.0",
